--- a/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/login_view.xml
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/login_view.xml
@@ -160,9 +160,9 @@
             android:layout_marginTop="6dp"
             android:layout_marginBottom="2dp"
             android:text="Mantener sesion activa"
-            app:layout_constraintBottom_toTopOf="@+id/btnValidation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:checked="true"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
