--- a/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/visit_view.xml
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/src/main/res/layout/visit_view.xml
@@ -1,114 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="418dp"
-        android:layout_height="763dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/microblink_blue"
+        android:minHeight="?attr/actionBarSize"
+        android:paddingLeft="15px"
+        android:paddingTop="15px"
+        android:paddingBottom="15px"
+        android:theme="?attr/actionBarTheme"
+        app:title="Visitas Registradas"
+        app:titleTextColor="#FFFFFF" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_marginStart="20px"
+        android:layout_marginLeft="20px"
+        android:layout_marginTop="20px"
+        android:layout_marginRight="15px"
+        android:layout_marginBottom="20px">
+
+        <EditText
+            android:id="@+id/ettFindV"
+            android:layout_width="222dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="600dp"
-            android:fontFamily="@font/poppinsbold"
-            android:gravity="center"
-            android:text="VISITAS"
-            android:textColor="#4fc3f7"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:targetApi="jelly_bean" />
-
-
-        <TableRow
-            android:id="@+id/tableRow"
-            android:layout_width="wrap_content"
-            android:layout_height="44dp"
-            android:layout_marginBottom="500dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <EditText
-                android:id="@+id/ettFindV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="y-m-d"
-                android:inputType="textPersonName"
-                android:paddingLeft="10px" />
-
-            <Button
-                android:id="@+id/btnFindV"
-                style="@style/Widget.AppCompat.Button"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/microblink_blue"
-                android:text="FIND"
-                android:textColor="#FDFDFD"
-                android:textColorHint="#FFFFFF" />
-        </TableRow>
+            android:ems="10"
+            android:hint="año - mes - dia"
+            android:inputType="textPersonName"
+            android:onClick="onClick"
+            android:paddingLeft="10px" />
 
         <Button
-            android:id="@+id/btnRegresarV"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnFindV"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="163dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:text="Regregar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:background="@color/microblink_blue"
+            android:text="FIND"
+            android:textColor="#FDFDFD"
+            android:textColorHint="#FFFFFF" />
+    </TableRow>
 
-        <ProgressBar
-            android:id="@+id/progressBar4"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegresarV"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tableRow" />
+    <ListView
+        android:id="@+id/lvlVisit"
+        style="@style/Widget.AppCompat.ListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/preview_overlay_color"
+        android:dividerHeight="3dp"
+        android:fadeScrollbars="true"
+        android:paddingBottom="50px"></ListView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="408dp"
-            android:layout_height="469dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegresarV"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
+    <Button
+        android:id="@+id/btnRegresarV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15px"
+        android:background="#09B3FF"
+        android:text="Regresar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#FAFAFA" />
 
-            <ListView
-                android:id="@+id/lvlVisit"
-                style="@style/Widget.AppCompat.ListView"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:divider="@color/preview_overlay_color"
-                android:dividerHeight="3dp"
-                android:fadeScrollbars="true"
-                android:paddingBottom="50px"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></ListView>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
